<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/sign_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_account" />

    <EditText
        android:id="@+id/sign_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_password" />

    <EditText
        android:id="@+id/sign_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_phone" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:text="@string/sign_up" />
</LinearLayout>